--- a/dap_sr_final.ipynb
+++ b/dap_sr_final.ipynb
@@ -10,32 +10,114 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Задачулька 1"
+    "# добрые гномы подсказывают как могут!!!\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "# - Фил, как там дальше?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Задачулька 2"
+    "## Задачулька 1\n",
+    "\n",
+    "Перед тобой результаты по теории вероятностей студентов одного из прошедших годов.\n",
+    "\n",
+    "> group — группа студента\n",
+    "\n",
+    "> ekz_final — финальный экзамен, переменная, которую мы будем предсказывать\n",
+    "\n",
+    "> остальные переменные — различные формы контроля до финального экзамена\n",
+    "\n",
+    "1. Удали из выборки данные студентов, не явившихся на финальный экзамен.\n",
+    "\n",
+    "2. Создай переменную pass равную единице для студентов, сдавших экзамен на 4 и выше, и нулю иначе.\n",
+    "\n",
+    "3. Построй диаграмму рассеяния оценки за финальный экзамен (ekz_final) и оценки за промежуточный экзамен (ekz_I).\n",
+    "\n",
+    "4. Заполни все пропуски в числовых переменных медианным значением, пропуск в группе можно считать особой группой и не заполнять.\n",
+    "\n",
+    "5. Раздели всю выборку на две части: обучающую 80% и тестовую 20%.\n",
+    "\n",
+    "*Подсказка от добрых гномов: ты ведь помнишь, что неплохо фиксировать зерно, чтобы всходы были реплицируемы?*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Задачулька 3"
+    "## Задачулька 2\n",
+    "\n",
+    "Сейчас мы прогнозируем ekz_final.\n",
+    "\n",
+    "1. На обучающей выборке оцени простую регрессию для прогнозирования.\n",
+    "\n",
+    "2. На обучающей выборке оцени LASSO-регрессию с подбором штрафного коэффициента с помощью кросс-валидации.\n",
+    "\n",
+    "3. На обучающей выборке оцени гребневую (ridge) регрессию с подбором штрафного коэффициента с помощью кросс-валидации.\n",
+    "\n",
+    "4. На обучающей выборке построй случайный лес из 1000 деревьев. \n",
+    "\n",
+    "5. Сравни качество всех построенных моделей на тестовой выборке.\n",
+    "\n",
+    "\n",
+    "Число групп (fold) в кросс-валидации бери равным пяти, в качестве целевого показателя — среднеквадратичную ошибку (MSE).\n",
+    "Группу студента в моделях (1)-(2)-(3) можно не учитывать. \n",
+    "\n",
+    "*Подсказка от добрых гномов: ты ведь помнишь, что для каких-то там алгоритмов данные надо масштабировать?*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Задачулька 4"
+    "## Задачулька 3\n",
+    "\n",
+    "Сейчас мы прогнозируем pass.\n",
+    "\n",
+    "1. На обучающей выборке оцени логистическую регрессию без штрафа для прогнозирования.\n",
+    "\n",
+    "2. На обучающей выборке построй лес из 1000 деревьев.\n",
+    "\n",
+    "3. Построй ROC-кривые оценнных моделей на тестовой выборке. \n",
+    "\n",
+    "4. Сравни качество всех построенных моделей на тестовой выборке с помощью площади под ROC-кривой.\n",
+    "\n",
+    "5. Для наилучшей модели и выбранного на глаз порога для вероятности посчитай таблицу сопряжённости.\n",
+    "\n",
+    "Число групп (fold) в кросс-валидации бери равным пяти. В качестве целевого показателя — площадь под ROC-кривой. Группу студента в модели (1) можно не учитывать.\n",
+    "\n",
+    "*Подсказка от добрых гномов: ну ты помнишь? и рандомизацию ещё фиксировать?*"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задачулька 4\n",
+    "\n",
+    "Если ты супер крут и решил прошлые задачки, а времени ещё вагон, то можешь получить бонусные баллы! \n",
+    "\n",
+    "Придумай новые фичи, подбери алгоритм прогнозирования, построй симпатичную картинку!\n",
+    "Сосредоточь свои усилия на чём-то одном: либо прогнозировании либо самой оценки, либо бинарного показателя pass.\n",
+    "\n",
+    "И да, [посади дерево](https://www.youtube.com/watch?v=h0gKrN8rDmI)!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
